[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/GhostFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://MenuScene.gd" type="Script" id=2]

[node name="MenuScene" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Message" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -21.5
margin_bottom = 21.5
custom_fonts/font = ExtResource( 1 )
text = "Ghost Chase Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 3.0
one_shot = true

[node name="StartButton" type="Button" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -100.0
margin_right = 21.0
margin_bottom = -80.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownMessage" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -319.0
margin_right = 512.0
custom_fonts/font = ExtResource( 1 )
text = "Ready to play?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HUD/StartButton" to="." method="_on_StartButton_pressed"]
